--- a/package.json
+++ b/package.json
@@ -33,5 +33,13 @@
     "eslint-plugin-prettier": "^2.6.2",
     "mocha": "^5.2.0",
     "prettier": "^1.13.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CinnaStar12/Kylo_Ren.git"
+  },
+  "bugs": {
+    "url": "https://github.com/CinnaStar12/Kylo_Ren/issues"
+  },
+  "homepage": "https://github.com/CinnaStar12/Kylo_Ren#readme"
 }
